[package]
name = "ssh_expect"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "macros"] }
async-ssh2-tokio = { version = "0.8" }
bpaf = { version = "0.9",features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8", features = [] }
magic-crypt = { version = "4.0" }
base64 = { version = "0.22", features = [] }
reqwest = { version = "0.12", default-features = false, features = ["trust-dns", "blocking", "json", "stream", "gzip", "rustls-tls-native-roots"] }
futures = "0.3"
regex = { version = "1.11" }
serde_json = { version = "1.0" }
tabled = { version = "0.17" }
async-stream = "0.3"
serde_derive = "1.0"
