[package]
name = "ssh_expect"
version = "0.1.3"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
tokio = { version = "1.44", features = ["rt", "rt-multi-thread", "macros"] }
async-ssh2-tokio = { version = "0.8.14" }
bpaf = { version = "0.9",features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8", features = [] }
magic-crypt = { version = "4.0" }
reqwest = { version = "0.12", default-features = false, features = ["trust-dns", "blocking", "json", "stream", "gzip", "rustls-tls-native-roots"] }
futures = "0.3"
regex = { version = "1.11" }
tabled = { version = "0.18" }
serde_derive = "1.0"
better_default = "1.0.5"
itertools = "0.14.0"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
rust-i18n = "3"